@@ -26,3 +26,63 @@ Overly long or obfuscated domains
 🖥️ GUI enhanced with FlatLaf Look & Feel
 
 📊 Pie chart reporting using JFreeChart (Safe vs Suspicious)
+
+
+📂 How to Run
+
+💻 Prerequisites
+Java 17 or above (with --enable-preview if using latest Java)
+
+JFreeChart (add to classpath)
+
+FlatLaf (add to classpath)
+
+🧪 Compile & Run
+
+javac -cp ".;jfreechart-x.x.x.jar;flatlaf-x.x.x.jar" PhishingGuy.java
+java -cp ".;jfreechart-x.x.x.jar;flatlaf-x.x.x.jar" PhishingGuy
+
+📈 Sample Output
+example
+[SCAN] http://facebook-login.tk
+[WARNING] Missing HTTPS (Not secure)
+[WARNING] Suspicious TLD used
+[WARNING] Keyword found: facebook
+[WARNING] Keyword found: login
+
+
+📊 Pie Chart Summary
+The app generates a pie chart summarizing total safe vs suspicious URLs after each scan.
+
+📄 Technologies Used
+
+| Category        | Tech Stack                  |
+| --------------- | --------------------------- |
+| Language        | Java                        |
+| GUI Toolkit     | Swing + FlatLaf             |
+| Reporting       | JFreeChart                  |
+| File Handling   | Java I/O                    |
+| Regex & Parsing | `Pattern`, `Matcher`, `URL` |
+
+
+📁 Folder Structure
+
+PhishingGuy/
+├── PhishingGuy.java
+├── utils/
+│   └── URLScanner.java
+├── assets/
+│   └── logo.png
+├── lib/
+│   ├── jfreechart-x.x.x.jar
+│   └── flatlaf-x.x.x.jar
+└── output.txt
+
+📎 License
+MIT License — free to use, modify, and share.
+
+🔗 GitHub Repository
+👉 Click here to visit the repo
+
+
+
